--- a/package/lean/autocore/files/arm/index.htm
+++ b/package/lean/autocore/files/arm/index.htm
@@ -739,7 +739,7 @@
 		<tr><td width="33%"><%:Uptime%></td><td id="uptime">-</td></tr>
 		<tr><td width="33%"><%:Load Average%></td><td id="loadavg">-</td></tr>
 		<tr><td width="33%"><%:CPU usage (%)%></td><td id="cpuusage">-</td></tr>
-	     <tr><td width="33%"> 固件定制 </td><td><a target="_blank" href="http://www.zyzh.cc/">振远</a></td></tr>
+	     <tr><td width="33%"> 固件定制 </td><td><a target="_blank" href="http://www.zyzh.cc/">ZYZH</a></td></tr>
 	</table>
 </fieldset>
 
